menambahkan header dan footer

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <title>My Page</title>
   </head>
   <body>
+    <header>Hello</header>
+
     <h1>Hello World!</h1>
     <p>
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est voluptatibus
       cum perspiciatis vero enim aliquid dolore iusto modi, omnis sit eligendi
       pariatur, natus consequuntur.
     </p>
+
+    <footer>Goodbye</footer>
   </body>
 </html>
