menambah penjelasan singkat halaman contact

--- a/contact-us.html
+++ b/contact-us.html
@@ -9,6 +9,8 @@
     <h1>Hello World!</h1>
     <p>Halaman Contact</p>
 
+    <p>contoh konflik line 12</p>
+
     <footer>Goodbye</footer>
   </body>
 </html>
